--- a/catalog/view/theme/default/address2.html
+++ b/catalog/view/theme/default/address2.html
@@ -209,8 +209,8 @@
 			<div class="content in_content address_content clearfix">
 				
 				<div class="left clearfix">
-					<ol class="top_ol liucheng clearfix">
-						<li class="active">
+					<ol class="top_ol liucheng ol_1 clearfix">
+						<li>
 							<img src="img/png/express.png" alt="" />
 							<span></span>
 							<p>1.Shipping</p>
@@ -232,157 +232,168 @@
 					</ol>
 					
 					<div class="text  clearfix">
-						<p class="form_p">* Required fields</p>
-						<form class="add_form clearfix">
-							<label for="">
-								<span>Frist Name *</span>
-								<input type="text" />
-							</label>
-							<label for="">
-								<span>Last Name *</span>
-								<input type="text" />
-							</label>
-							<label class="add_label" for="">
-								<span>Address *</span>
-								<input type="text" />
-								<input type="text" />
-							</label>
+						<div class="bg_fff">
+							<p class="form_p">* Required fields</p>
+							<form class="add_form clearfix">
+								<label for="">
+									<span>Frist Name *</span>
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label for="">
+									<span>Last Name *</span>
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label class="add_label" for="">
+									<span>Address *</span>
+									<input type="text" />
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								
+								<label for="">
+									<span>Country *</span>
+									<select name="">
+										<option value="">Country</option>
+										<option value="">Country</option>
+										<option value="">Country</option>
+										<option value="">Country</option>
+									</select>
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label for="">
+									<span>Post Code *</span>
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label for="">
+									<span>City *</span>
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label for="">
+									<span>State *</span>
+									<select name="">
+										<option value="">Select State</option>
+										<option value="">Select State</option>
+										<option value="">Select State</option>
+										<option value="">Select State</option>
+									</select>
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<label for="">
+									<span>Phone *</span>
+									<input type="text" />
+									<p class="ts_ps">This field is required</p>
+								</label>
+								<button class="qx_btn" type="reset">cancel</button>
+								
+								<a class="btn240 clearfix clear" href="###">SAVE ADDRESS&nbsp;&nbsp;&nbsp;></a>
+							</form>
 							
-							<label for="">
-								<span>Country *</span>
-								<select name="">
-									<option value="">Country</option>
-									<option value="">Country</option>
-									<option value="">Country</option>
-									<option value="">Country</option>
-								</select>
-							</label>
-							<label for="">
-								<span>Post Code *</span>
-								<input type="text" />
-							</label>
-							<label for="">
-								<span>City *</span>
-								<input type="text" />
-							</label>
-							<label for="">
-								<span>State *</span>
-								<select name="">
-									<option value="">Select State</option>
-									<option value="">Select State</option>
-									<option value="">Select State</option>
-									<option value="">Select State</option>
-								</select>
-							</label>
-							<label for="">
-								<span>Phone *</span>
-								<input type="text" />
-							</label>
-							<button class="qx_btn" type="reset">cancel</button>
 							
-							<button class="bc_btn">save address&nbsp;&nbsp; ></button>
-						</form>
-						
-						
-						
-						
-						<ul class="express_ul clearfix" style="padding-bottom: 2.91vw;">
-							<li style="border-bottom: 1px solid #ddd;padding: 2.08vw 0;" class="clearfix">
-								<dl>
-									<dt>Shipping Method</dt>
-									<dd>
-										<label for="" class="dx_label">
-											<input class="check_input" type="checkbox" />
-											<i class="check_i"></i>
-										</label>
-										<span>Nigeria Local Express </span>
-									</dd>
-								</dl>
-								<dl>
-									<dt>Expected delivery time</dt>
-									<dd>
-										<span>2-3 Working Days</span>
-									</dd>
-								</dl>
-								<dl>
-									<dt>Shipping Cost</dt>
-									<dd>
-										<span>$0.00</span>
-									</dd>
-								</dl>
-							</li>
-						</ul>
+							
+							<ul class="express_ul clearfix" style="padding-bottom: 2.91vw;">
+								<li style="border-bottom: 1px solid #ddd;padding: 2.08vw 0;" class="clearfix">
+									<dl>
+										<dt>Shipping Method</dt>
+										<dd>
+											<label for="" class="dx_label">
+												<input class="check_input" type="checkbox" />
+												<i class="check_i"></i>
+											</label>
+											<span>Nigeria Local Express </span>
+										</dd>
+									</dl>
+									<dl>
+										<dt>Expected delivery time</dt>
+										<dd>
+											<span>2-3 Working Days</span>
+										</dd>
+									</dl>
+									<dl>
+										<dt>Shipping Cost</dt>
+										<dd>
+											<span>$0.00</span>
+										</dd>
+									</dl>
+								</li>
+							</ul>
+							
+							<a class="btn240 type2" href="###">SAVW AND CONTINUE&nbsp;&nbsp;&nbsp;></a>
+						</div>
 						
 					</div>
-					
 				</div>
 			
-				<div class="right clearfix">
-					<h2>SUMMARY</h2>
-					<ul class="cart_ul">
-						<li class="clearfix">
-							<a href="###">
-								<div class="pic_img">
-									<img src="img/jpg/index1_1.jpg"/>
-								</div>
-								<div class="text">
-									<h2>Fuller Peruvian Virgin Hair </h2>
-	 								<p>Body Wavy</p>
-	 								<span>$15.39</span>
-								</div>
-							</a>
-						</li>
-						<li class="clearfix">
-							<a href="###">
-								<div class="pic_img">
-									<img src=""/>
-								</div>
-								<div class="text">
-									<h2>Fuller Peruvian Virgin Hair  </h2>
-	 								<p>Body Wavy</p>
-	 								<span>$15.39</span>
-								</div>
-							</a>
-						</li>
-						<li class="clearfix">
-							<a href="###">
-								<div class="pic_img">
-									<img src=""/>
-								</div>
-								<div class="text">
-									<h2>Fuller Peruvian Virgin Hair  </h2>
-	 								<p>Body Wavy</p>
-	 								<span>$15.39</span>
-								</div>
-							</a>
-						</li>
-						<li class="clearfix">
-							<a href="###">
-								<div class="pic_img">
-									<img src=""/>
-								</div>
-								<div class="text">
-									<h2>Fuller Peruvian Virgin Hair  </h2>
-	 								<p>Body Wavy</p>
-	 								<span>$15.39</span>
-								</div>
-							</a>
-						</li>
-					</ul>
-					<p class="p1">Shipping <span class="fr">$70.00</span></p>
-					<p class="p2">Total <span class="fr">$70.00</span></p>
-					<div class="shop_search">
-						<p>
-							If you have coupons, please fill them out. If not, 
-							please pay.
-						</p>
-						<label for="">
-							<input type="text" placeholder="coupon code"/>
-							<button>CONFIRM</button>
-						</label>
-					</div>
-					<div class="btn">
-						<a class="a_btn" href="###">GO TO CHECK OUT&nbsp;&nbsp;&nbsp;></a>
+				<div class="right right_shop clearfix">
+					<div class="bg_fff">
+						<h2>SUMMARY</h2>
+						<ul class="cart_ul">
+							<li class="clearfix">
+								<a href="###">
+									<div class="pic_img">
+										<img src="img/jpg/index1_1.jpg"/>
+									</div>
+									<div class="text">
+										<h2>Fuller Peruvian Virgin Hair </h2>
+		 								<p>Body Wavy</p>
+		 								<span>$15.39</span>
+									</div>
+								</a>
+							</li>
+							<li class="clearfix">
+								<a href="###">
+									<div class="pic_img">
+										<img src=""/>
+									</div>
+									<div class="text">
+										<h2>Fuller Peruvian Virgin Hair  </h2>
+		 								<p>Body Wavy</p>
+		 								<span>$15.39</span>
+									</div>
+								</a>
+							</li>
+							<li class="clearfix">
+								<a href="###">
+									<div class="pic_img">
+										<img src=""/>
+									</div>
+									<div class="text">
+										<h2>Fuller Peruvian Virgin Hair  </h2>
+		 								<p>Body Wavy</p>
+		 								<span>$15.39</span>
+									</div>
+								</a>
+							</li>
+							<li class="clearfix">
+								<a href="###">
+									<div class="pic_img">
+										<img src=""/>
+									</div>
+									<div class="text">
+										<h2>Fuller Peruvian Virgin Hair  </h2>
+		 								<p>Body Wavy</p>
+		 								<span>$15.39</span>
+									</div>
+								</a>
+							</li>
+						</ul>
+						<p class="p1">Shipping <span class="fr">$70.00</span></p>
+						<p class="p2">Total <span class="fr">$70.00</span></p>
+						<div class="shop_search">
+							<p>
+								If you have coupons, please fill them out. If not, 
+								please pay.
+							</p>
+							<label for="">
+								<input type="text" placeholder="coupon code"/>
+								<button>CONFIRM</button>
+							</label>
+						</div>
+						<div class="btn">
+						</div>
 					</div>
 				</div>
 			
