--- a/catalog/view/theme/default/my_vip.html
+++ b/catalog/view/theme/default/my_vip.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>SHOPCART2</title>
+		<title>Personal Center</title>
 	</head>
 	<body>
 		<!--头部-->
@@ -205,140 +205,172 @@
 		
 		</div>
 		<!--内容-->
-		<div class="shopcart2 clearfix">
-			<div class="content in_content shop2_content clearfix">
-				<div class="top clearfix">
-					<h1>SHOPPING CART</h1>
-					<a href="###">Continue Shopping</a>
+		
+		<div class=" in_content peo_center my_vip">
+			<div class="content clearfix">
+				
+				<div class="left clearfix">
+					<h1>MY ACCOUNT</h1>
+					<ol>
+						<li><a href="###">My Orders</a></li>
+						<li class="active"><a href="###">Account Information</a></li>
+						<li><a href="###">Address List</a></li>
+						<li><a href="###">My Wish List</a></li>
+						<li><a href="###">My VIP</a></li>
+						<li><a href="###">My Coupon</a></li>
+						<li><a href="###">Help Center</a></li>
+						<li><a href="###">Logout </a></li>
+					</ol>
 				</div>
 				
-				<div class="shop2_text clearfix">
-					<div class="left">
-						<label for="" class="qx_label">
-							<span>ALL</span>
-							<input class="check_input" type="checkbox" />
-							<i class="check_i"></i>
-						</label>
-						<ul class="shop2_ul">
-							<li class="clearfix">
-								<label for="" class="dx_label">
-									<input class="check_input"  type="checkbox" />
-									<i class="check_i"></i>
-								</label>
-								<div class="pic_img">
-									<a href="###"><img src="img/jpg/pro_det1.jpg" alt="" /></a>
-								</div>
-								<div class="text">
-									<a class="a_bt" href="###">Fuller Peruvian Virgin Hair  Body Wavy   </a>
-									<p><span>Color:</span> Natural Black</p>
-									<p><span>Length:</span> 12inch</p>
-									<p><span>Commodity code:</span> xhs00245</p>
-								</div>
-								<div class="price clearfix">
-									<p>$35.65<span>$35.65</span></p>
-								</div>
-								<div class="pre_div">
-									<div class="num_div">
-										<span class="sub"></span>
-										<input class="num" type="text" value="1" />
-										<span class="add"></span>
-									</div>
-								</div>
-								<div class="close"></div>
-								<span class="wishlist">Move to Wishlist</span>
+				<div class="right m_vip clearfix">
+					<div class="bnr_img">
+						<img class="changeimage" data-image='img/jpg/pc_vip.jpg' data-mimage='img/jpg/yd_vip.jpg'  />
+						<img class="vip_img" src="img/png/vip1.png"/>
+						<p class="p1">Your VIP level:VIP</p>
+						<p class="p2">Dear XXX, Welcome to Hot Beauty VIP Club.</p>
+					</div>
+					
+					<div class="text_1 clearfix">
+						<h1 class="vip_h1">VIP SYSTEM</h1>
+						<img src="img/jpg/vip1.jpg"/>
+					</div>
+					
+					<div class="text_2 clearfix">
+						<h1 class="vip_h1">ORDER RECORD</h1>
+						<ul>
+							<li>
+								<span>Orders</span>
+								<span>Accumulated Amount</span>
+								<span>Amount Away From Next Level</span>
 							</li>
-							<li class="clearfix">
-								<label for="" class="dx_label">
-									<input class="check_input"  type="checkbox" />
-									<i class="check_i"></i>
-								</label>
-								<div class="pic_img">
-									<a href="###"><img src="img/jpg/pro_det1.jpg" alt="" /></a>
-								</div>
-								<div class="text">
-									<a class="a_bt" href="###">Fuller Peruvian Virgin Hair  Body Wavy   </a>
-									<p><span>Color:</span> Natural Black</p>
-									<p><span>Length:</span> 12inch</p>
-									<p><span>Commodity code:</span> xhs00245</p>
-								</div>
-								<div class="price clearfix">
-									<p>$35.65<span>$35.65</span></p>
-								</div>
-								<div class="pre_div">
-									<div class="num_div">
-										<span class="sub"></span>
-										<input class="num" type="text" value="1" />
-										<span class="add"></span>
-									</div>
-								</div>
-								<div class="close"></div>
-								<span class="wishlist">Move to Wishlist</span>
+							<li>
+								<span>0</span>
+								<span>$0.00</span>
+								<span>$500</span>
 							</li>
 						</ul>
 					</div>
-				
-					<div class="right">
-						<div class="bg_fff">
-							<h2>SUMMARY</h2>
-							<p class="p1">Subtotal <span class="fr">$70.00</span></p>
-							<p class="p2">Total <span class="fr">$70.00</span></p>
-							<div class="shop_search">
-								<p>
-									If you have coupons, please fill them out. If not, 
-									please pay.
-								</p>
-								<label for="">
-									<input type="text" placeholder="coupon code"/>
-									<button>CONFIRM</button>
-								</label>
-							</div>
-							<div class="btn">
-								<a class="a_btn" href="###">GO TO CHECK OUT&nbsp;&nbsp;&nbsp;></a>
-							</div>
+					
+					<div class="text_3 clearfix">
+						<h1 class="vip_h1">VIP MEMBER BENEFITS</h1>
+						<ul>
+							<li>
+								<span>Your Accumulated Amount</span>
+								<span>$0</span>
+								<span>$500</span>
+								<span>$5000</span>
+								<span>$10000</span>
+							</li>
+							<li>
+								<span>VIP Grade Benifits</span>
+								<span>VIP</span>
+								<span>Silver VIP</span>
+								<span>Gold VIP</span>
+								<span>Diamond VIP</span>
+							</li>
+							<li>
+								<span>20% Price Off</span>
+								<span class="active"></span>
+								<span class="active"></span>
+								<span class="active"></span>
+								<span class="active"></span>
+							</li>
+							<li>
+								<span>Upgrade Discount Price</span>
+								<span></span>
+								<span class="active"></span>
+								<span class="active"></span>
+								<span class="active"></span>
+							</li>
+							<li>
+								<span>Free Label Design</span>
+								<span></span>
+								<span class="active"></span>
+								<span class="active"></span>
+								<span class="active"></span>
+							</li>
+							<li>
+								<span>1000pcs Free Label</span>
+								<span></span>
+								<span></span>
+								<span class="active"></span>
+								<span class="active"></span>
+							</li>
+							<li>
+								<span>3000pcs Free Label</span>
+								<span></span>
+								<span></span>
+								<span></span>
+								<span class="active"></span>
+							</li>
+							<li>
+								<span>First Order Coupon $10</span>
+								<span class="active"></span>
+								<span class="active"></span>
+								<span class="active"></span>
+								<span class="active"></span>
+							</li>
+							<li>
+								<span>Upgrade Gifts</span>
+								<span></span>
+								<span class="active"></span>
+								<span class="active"></span>
+								<span class="active"></span>
+							</li>
+						</ul>
+					</div>
+					
+					<div class="text_4 clearfix">
+						<div class="div_text">
+							<p>Notes: </p>
+							<p>We will also offer you an upgrade gifts when you reached the certain level.</p>
+						
+							<ul>
+								<li>
+									<span>Silver VIP</span>
+									<span>1 free 4*4 Closure 10”</span>
+								</li>
+								<li>
+									<span>Gold VIP</span>
+									<span>2 free 4*4 Closure 12” or  1 free ear to ear 4*13 frontal</span>
+								</li>
+								<li>
+									<span>Diamond VIP</span>
+									<span>3 Bundles of 18” free Hair + 1 Free 4*4 Closure/frontal 14”or 1 free wig</span>
+								</li>
+							</ul>
 						</div>
 					</div>
-				</div>
-				
-				<div class="bot clearfix">
-					<dl>
-						<dt>Delivery dates</dt>
-						<dd class="pc_dd">
-							We ship by FedEx, DHL express and local express.<br />
-							You can expect to get these items within <br />
-							5-7 days. <a href="###">More information&nbsp;&nbsp;>></a>
-						</dd>
-						<dd class="yd_dd">
-							Shopping on Hot Beauty Hair.com is safe and secure 
-							- guaranteed!
-						</dd>
+					
+					<div class="text_5 clearfix">
+						<div class="div_text">
+							<h1 class="vip_h1">HOW DOES HOT BEAUTY HAIR'S VIP PROGRAM WORKS?</h1>
 						
-					</dl>
-					<dl>
-						<dt>Satisfaction Guaranteed </dt>
-						<dd>
-							Hot Beauty Hair.com cares about your complete 
-							satisfaction. We offer a comprehensive return policy 
-							on all items, allowing you to shop with confidence.
-						</dd>
-					</dl>
-					<dl>
-						<dt>Privacy Policy</dt>
-						<dd class="pc_dd">
-							Hot Beauty Hair.com respects your privacy.<br />
-							We do NOT share or in any way distribute 
-							any personal, business or contact information 
-							you may provide. <a href="###">See Our Return Policy&nbsp;&nbsp;>></a>
-						</dd>
-						<dd class="yd_dd">
-							Hot Beauty Hair.com respects your privacy.We do NOT share 
-							or in any way distribute any personal, business or contact 
-							information you may provide.
-						</dd>
-					</dl>
+							<p class="p1_text">
+								Hot Beauty Hair's VIP program includes 4 stages and each stage will enjoy different price discount. Our system has 
+								the record of purchase history and we can calculate your VIP level according to how much you have spent.
+							</p>
+							<ul>
+								<li><p><span>• VIP:</span> Register to get account.</p></li>
+								<li><p><span>• Silver VIP:</span> Accumulative spent over $500.</p></li>
+								<li><p><span>• Gold VIP:</span> Accumulative spent among $5,000.</p></li>
+								<li><p><span>• Diamond VIP:</span> Accumulative spent over $10,000.</p></li>
+							</ul>
+							<p class="p2_text">
+								<span>Notes:</span>
+								<span>if you have any questions,do not hesitate to send us an email to rebecca@hotbeautyhair.com.</span>
+							</p>
+						</div>
+					</div>
+					
 				</div>
 				
 			</div>
+			
+			
 		</div>
+		
 		<!--返回顶部-->
 		<div class="xf_right">
 			<div class="vip"><a href="###"><span>VIP</span></a></div>
@@ -517,94 +549,3 @@
 	</body>
 </html>
 
-<script>
-	$(function(){
-		//全选
-		$(".qx_label input").click(function(){
-			if($(this).prop("checked")){
-				$(this).siblings(".check_i").addClass("active");
-				$(".dx_label input").each(function(){
-					$(this).prop("checked",true);
-					$(this).siblings(".check_i").addClass("active");
-				})
-			}else{
-				$(this).siblings(".check_i").removeClass("active");
-				$(".dx_label input").each(function(){
-					$(this).prop("checked","");
-					$(this).siblings(".check_i").removeClass("active");
-				})
-			}
-		})
-		//单选
-		$(".dx_label input").click(function(){
-			if($(this).prop("checked")){
-				$(this).siblings(".check_i").addClass("active");
-				var len = $(".dx_label .check_i").length;
-				var i=0;
-				$(".dx_label .check_i").each(function(){
-					if($(this).hasClass("active")){
-						i++
-					}
-					return i;
-				})
-				if(i>=len){
-					$(".qx_label input").prop("checked",true);
-					$(".qx_label .check_i").addClass("active");
-				}
-				
-			}else{
-				$(this).siblings(".check_i").removeClass("active");
-				$(".qx_label .check_i").removeClass("active");
-				$(".qx_label input").prop("checked","");
-			}
-		})
-		
-		//		数量
-		$(".sub").click(function(){
-			var num  = $(this).siblings(".num").val();
-			if(num>1){
-				num--;
-				 $(this).siblings(".num").val(num);
-			}
-		})
-		$(".add").click(function(){
-			var num  = $(this).siblings(".num").val();
-			num++;
-			 $(this).siblings(".num").val(num);
-		})
-		
-		//收藏
-		$(".wishlist").click(function(){
-			var win = $(window).width();
-			if(win>992){
-				if($(this).hasClass("off")){
-					$(this).removeClass("off");
-					$(this).css("background","url(img/png/shop_star.png) no-repeat left center").css("background-size","0.83vw 0.83vw").css("color","#666");
-				}else{
-					$(this).addClass("off");
-					$(this).css("background","url(img/png/shop_star_.png) no-repeat left center").css("background-size","0.83vw 0.83vw").css("color","#d5af74");
-				}
-			}else{
-				if($(this).hasClass("off")){
-					$(this).removeClass("off");
-					$(this).css("background","url(img/png/shop_star.png) no-repeat left center").css("background-size","0.16rem 0.16rem").css("color","#666");
-				}else{
-					$(this).addClass("off");
-					$(this).css("background","url(img/png/shop_star_.png) no-repeat left center").css("background-size","0.16rem 0.16rem").css("color","#d5af74");
-				}
-			}
-			
-		})
-		
-		//删除
-		$(".shopcart2 .close").click(function(){
-			$(this).parents("li").remove();
-		})
-		
-		//搜索
-		$(".shop_search input").focus(function(){
-			$(".shop_search button").css("display","block");
-		})
-	})
-</script>
-		
