--- a/catalog/view/theme/default/address.html
+++ b/catalog/view/theme/default/address.html
@@ -209,8 +209,8 @@
 			<div class="content in_content address_content clearfix">
 				
 				<div class="left clearfix">
-					<ol class="top_ol liucheng clearfix">
-						<li class="active">
+					<ol class="top_ol ol_1 liucheng clearfix">
+						<li>
 							<img src="img/png/express.png" alt="" />
 							<span></span>
 							<p>1.Shipping</p>
@@ -232,8 +232,7 @@
 					</ol>
 					
 					<div class="text clearfix">
-						  <div class="shipping_address" id="shipping_address">
-						<h2>Select the shipping address</h2>
+						<h2>1.Select the shipping address</h2>
 						<ul class="address_ul clearfix">
 							<li class="active clearfix">
 								<span>LIUBIHUI</span>
@@ -267,9 +266,7 @@
 							</li>
 						</ul>
 						<a class="add_a" href="###">Add new address</a>
-						</div>
-						 <div class="shipping_address" id="shipping_address">
-						<h3>Shipping Method</h3>
+						<h2>2.Select the Shipping Method</h2>
 						<ul class="express_ul">
 							<li class="clearfix">
 								<dl>
@@ -327,17 +324,12 @@
 								</dl>
 							</li>
 						</ul>
-						
-					</div>
-					</div>
-					
+						<a class="btn240" href="###">SAVW AND CONTINUE &nbsp;&nbsp;&nbsp;></a>
 					</div>
 					
 				</div>
 			
-				<div class="right clearfix">
-					   <div class="payment_next" id="payment_next" >
-					 <div class="collapse-checkout" id='collapse-checkout-confirm'>
+				<div class="right right_shop clearfix">
 					<h2>SUMMARY</h2>
 					<ul class="cart_ul">
 						<li class="clearfix">
@@ -402,9 +394,8 @@
 						</label>
 					</div>
 					<div class="btn">
-						<a class="a_btn" href="###">GO TO CHECK OUT&nbsp;&nbsp;&nbsp;></a>
+						
 					</div>
-				</div>
 				</div>
 			
 			</div>
