--- a/catalog/view/theme/default/css/common.css
+++ b/catalog/view/theme/default/css/common.css
@@ -62,6 +62,19 @@ header{position:fixed;top:0;left:0;width:100%;background: #fff;z-index:10;height
 .red_i{color: #fd4f57;}
 .modal{width: 100%;height: 100%;position: fixed;left: 0;top: 0; z-index: 999;background: rgba(0,0,0,.6);}
 .zzc_div{width: 100%;height: 100%;position: fixed;z-index:11;left: 0;top: 0;background: rgba(0,0,0,.0);display: none;}
+.bg_fff{background: #fff;}
+.bg_gif{background: url(../img/loading.gif) no-repeat center center;}
+
+.btn240{width:240px;height:40px;text-align: center;line-height: 40px;background: #333;font-size: 16px;color: #fff;display: block;border-radius: 4px;font-weight: normal;}
+.btn240:hover{background: #666;}
+@media only screen and (min-width: 1px) and (max-width: 992px) {
+	.btn240{width:6.28rem;height:0.8rem;text-align: center;line-height: 0.8rem;background: #333;font-size: 0.24rem;color: #fff;
+	display: block;border-radius: 4px;font-weight: normal;margin: auto;}
+}
+
+
+.ts_ps{display: block;color: #fd4f57;font-size: 14px;margin: 10px 0;}
+
 
 
 /*字体*/
