--- a/catalog/view/theme/default/css/common.css
+++ b/catalog/view/theme/default/css/common.css
@@ -63,7 +63,7 @@ header{position:fixed;top:0;left:0;width:100%;background: #fff;z-index:10;height
 .modal{width: 100%;height: 100%;position: fixed;left: 0;top: 0; z-index: 999;background: rgba(0,0,0,.6);}
 .zzc_div{width: 100%;height: 100%;position: fixed;z-index:11;left: 0;top: 0;background: rgba(0,0,0,.0);display: none;}
 .bg_fff{background: #fff;}
-.bg_gif{background: url(../img/loading.gif) no-repeat center center;}
+.bg_gif{background:#fff url(../img/loading.gif) no-repeat center top;min-height: 300px;}
 
 .btn240{width:240px;height:40px;text-align: center;line-height: 40px;background: #333;font-size: 16px;color: #fff;display: block;border-radius: 4px;font-weight: normal;}
 .btn240:hover{background: #666;}
