--- a/catalog/view/theme/default/css/index.css
+++ b/catalog/view/theme/default/css/index.css
@@ -313,7 +313,9 @@
 	.shop2_content .price{float: left;width: 9.37vw;text-align: center;margin-left: 2vw;}
 	.shop2_content .price p{line-height: 9.37vw;font-size: 0.93vw;font-family: san_r;color: #fe2a4d;}
 	.shop2_content .price p span{text-decoration: line-through;color: #999;margin-left: 0.83vw;}
-	.shop2_content .pre_div{position: relative;height: 9.37vw;width: 124px;float: left;margin-left: 0.83vw;}
+	.shop2_content .pre_div{position: relative;height: 9.37vw;width: 124px;float: left;}
+	.shop2_content .total{float: left;}
+	.shop2_content .total span{display: block;line-height: 9.37vw;font-size: 0.93vw;padding-left: 1.04vw;color:#fe2a4d;}
 	.shop2_content .num_div {float: left;border: 1px solid #ccc;box-sizing: border-box;position: absolute;top: 50%;margin-top: -21px;}
 	.shop2_content .num_div span{float: left;width: 40px;height: 40px;cursor: pointer;display: block;}
 	.shop2_content .num_div span.sub{background: url(../img/png/sub.png) no-repeat center center;background-size: 13px;}
@@ -1000,15 +1002,17 @@
 	.shop2_content .price p{font-size: 0.24rem;font-family: san_r;color: #fe2a4d;}
 	.shop2_content .price p span{text-decoration: line-through;color: #999;margin-left: 0.08rem;}
 	.shop2_content .pre_div{position: absolute;bottom: 0.45rem;left: 02.47rem;width: 1.54rem;}
-	.shop2_content .num_div {float: left;border: 0.01rem solid #ccc;box-sizing: border-box;height: 0.5rem;}
+	.shop2_content .num_div {float: left;border: 0.01rem solid #ccc;box-sizing: border-box;height: 0.5rem;width: 1.56rem;position: relative;}
 	.shop2_content .num_div span{float: left;width: 0.5rem;height: 0.5rem;cursor: pointer;display: block;}
-	.shop2_content .num_div span.sub{background: url(../img/png/sub.png) no-repeat center center;background-size: 0.17rem;}
-	.shop2_content .num_div span.add{background: url(../img/png/add.png) no-repeat center center;background-size: 0.17rem 0.17rem;}
+	.shop2_content .num_div span.sub{background: url(../img/png/sub.png) no-repeat center center;background-size: 0.17rem;
+	position: absolute;top: 0;left: 0;}
+	.shop2_content .num_div span.add{background: url(../img/png/add.png) no-repeat center center;background-size: 0.17rem 0.17rem;
+	position: absolute;top: 0;right: 0;}
 	.shop2_content .num_div input{width: 0.5rem;height: 0.48rem;line-height: 0.5rem;float: left;text-align: center;border-right: 0.01rem solid #ccc;
-	border-left: 0.01rem solid #ccc;box-sizing: content-box;}
+	border-left: 0.01rem solid #ccc;box-sizing: content-box;border-radius: inherit;background: transparent;position: absolute;top: 0;left: 0.5rem;}
 	.shop2_content .close{width: 0.4rem;height: 0.4rem;position: absolute;top:0.4rem;right: 0;background: url(../img/png/close3.png) no-repeat;
 	background-size: 0.4rem 0.4rem;cursor: pointer;}
-	.shop2_content .wishlist{font-family: san_r; font-size: 0.18remvw;color: #666;position: absolute;left: 0.45rem;bottom: 0.4rem;text-decoration: underline;
+	.shop2_content .wishlist{font-family: san_r; font-size: 0.18rem;color: #666;position: absolute;left: 0.45rem;bottom: 0.4rem;text-decoration: underline;
 	padding-left: 0.2rem;background: url(../img/png/shop_star.png) no-repeat left center;background-size: 0.16rem 0.16rem;}
 	.shop2_content .shop2_text .right{background: #fff;width: 100%;padding-top: 0.35rem;margin-top: 0.2rem;}
 	.shop2_content .shop2_text .right h2{font-size: 0.3rem;line-height: 0.3rem;padding:  0 0.2rem;font-family: san_b;}
@@ -1303,30 +1307,33 @@
 	
 	/*m_vip*/ 
 	.my_vip .content{padding: 0 !important;}
-	.peo_center .m_vip{padding-top: 2.08vw;}
-	.peo_center .m_vip .bnr_img{position: relative;margin-bottom: 2.08vw;}
-	.peo_center .m_vip .vip_img{position: absolute;bottom: 9.8vw;left: 50%;margin-left: -24px;width:48px;height: 48px;display: block;}
-	.peo_center .m_vip .p1{font-family: san_r;font-size: 1.25vw;color: #d5af74;text-align: center;
-	position: absolute;bottom: 7.8vw;line-height: 1.5vw;width: 100%;display: block;}
-	.peo_center .m_vip .p2{font-family: san_r;font-size: 1.04vw;color: #c0bbaf;text-align: center;
-	position: absolute;bottom: 5.72vw;line-height: 1.24vw;width: 100%;display: block;}
-	.peo_center .m_vip .vip_h1{font-size: 20px;font-weight: bold;color: #333;text-align: center;line-height: 20px;margin-bottom: 2.08vw;}
-	.peo_center .m_vip .text_1{background: #fff;padding-top: 0.4rem;}
+	.peo_center .m_vip{padding-top: 0.4rem;}
+	.peo_center .m_vip .bnr_img{position: relative;margin-bottom: 0.2rem;}
+	.peo_center .m_vip .vip_img{position: absolute;bottom: 1.84rem;left: 50%;margin-left: -0.24rem;width:0.48rem;height: 0.48rem;display: block;}
+	.peo_center .m_vip .p1{font-family: san_r;font-size: 0.22rem;color: #d5af74;text-align: center;
+	position: absolute;bottom:1.5rem;line-height: 0.3rem;width: 100%;display: block;}
+	.peo_center .m_vip .p2{font-family: san_r;font-size: 0.22rem;color: #c0bbaf;text-align: center;
+	position: absolute;bottom: 1.15rem;line-height: 0.3rem;width: 100%;display: block;}
+	
+	.peo_center .m_vip .vip_h1{font-size: 0.22rem;font-weight: normal;font-family: san_b; color: #333;
+	text-align: center;line-height: 0.22rem;margin-bottom: 0.4rem;}
+	.peo_center .m_vip .text_1{background: #fff;padding: 0.4rem 0.4rem 0 0.4rem;margin-bottom: 0.2rem;}
 	.peo_center .m_vip .text_1 img{display: block;margin: auto;}
-	.peo_center .m_vip .text_2{padding-top: 4.16vw;background: #fff;}
-	.peo_center .m_vip .text_2 ul {max-width: 800px;margin: auto;display: block;border: 1px solid #ccc;}
-	.peo_center .m_vip .text_2 ul li{width: 100%;height: 50px;line-height: 50px;border-top: 1px solid #ccc;}
+	
+	.peo_center .m_vip .text_2{background: #fff;padding: 0.4rem 0.2rem;margin-bottom: 0.2rem;}
+	.peo_center .m_vip .text_2 ul {display: block;border: 1px solid #ccc;}
+	.peo_center .m_vip .text_2 ul li{width: 100%;height: 0.6rem;line-height: 0.6rem;border-top: 1px solid #ccc;}
 	.peo_center .m_vip .text_2 ul li:first-child{background: #f5f5f5;border-top: none;}
-	.peo_center .m_vip .text_2 ul li span{font-size: 16px;float: left;display: block;text-align: center;
-	line-height: 50px;border-left: 1px solid #ccc;box-sizing: border-box;}
+	.peo_center .m_vip .text_2 ul li span{font-size: 0.2rem;float: left;display: block;text-align: center;
+	line-height: 0.6rem;border-left: 1px solid #ccc;box-sizing: border-box;}
 	.peo_center .m_vip .text_2 ul li span:nth-child(1){width: 17%;border-left: none;}
 	.peo_center .m_vip .text_2 ul li span:nth-child(2){width: 32%;}
 	.peo_center .m_vip .text_2 ul li span:nth-child(3){width: 51%;}
 	.peo_center .m_vip .text_3{padding-top: 4.16vw;padding-bottom: 2.08vw;background: #fff;}
 	.peo_center .m_vip .text_3 ul{max-width: 800px;margin: auto;display: block;border: 1px solid #ccc;}
-	.peo_center .m_vip .text_3 ul li{width: 100%;height: 50px;line-height: 50px;border-top: 1px solid #ccc;}
-	.peo_center .m_vip .text_3 ul li span{font-size: 16px;float: left;display: block;text-align: center;
-	line-height: 50px;border-left: 1px solid #ccc;box-sizing: border-box;width: 17.5%;height: 50px;}
+	.peo_center .m_vip .text_3 ul li{width: 100%;height: 0.6rem;line-height: 0.6rem;border-top: 1px solid #ccc;}
+	.peo_center .m_vip .text_3 ul li span{font-size: 0.2rem;float: left;display: block;text-align: center;
+	line-height: 0.6rem;border-left: 1px solid #ccc;box-sizing: border-box;width: 17.5%;height: 0.6rem;}
 	.peo_center .m_vip .text_3 ul li:first-child{border-top: none;}
 	.peo_center .m_vip .text_3 ul li:first-child span:first-child{border-bottom: none;}
 	.peo_center .m_vip .text_3 ul li span:first-child{background: #f5f5f5;width: 30%;border-left: none;border-bottom: 1px solid #ccc;}
@@ -1335,15 +1342,15 @@
 	.peo_center .m_vip .text_4{padding-bottom: 5.2vw;background: #fff;}
 	.peo_center .m_vip .text_4>p{font-size: 20px;color: #333;margin-bottom: 1.04vw;line-height: 20px;}
 	.peo_center .m_vip .text_4 ul{max-width: 800px;margin: auto;display: block;border: 1px solid #ccc;}
-	.peo_center .m_vip .text_4 ul li{width: 100%;height: 50px;line-height: 50px;border-top: 1px solid #ccc;}
+	.peo_center .m_vip .text_4 ul li{width: 100%;height: 0.6rem;line-height: 0.6rem;border-top: 1px solid #ccc;}
 	.peo_center .m_vip .text_4 ul li span{font-size: 16px;float: left;display: block;text-align: center;
-	line-height: 50px;border-left: 1px solid #ccc;box-sizing: border-box;width: 70%;height: 50px;}
+	line-height: 0.6rem;border-left: 1px solid #ccc;box-sizing: border-box;width: 70%;height: 0.6rem;}
 	.peo_center .m_vip .text_4 ul li:first-child{border-top: none;}
 	.peo_center .m_vip .text_4 ul li:first-child span:first-child{border-bottom: none;}
 	.peo_center .m_vip .text_4 ul li span:first-child{background: #f5f5f5;width: 30%;border-left: none;border-bottom: 1px solid #ccc;}
 	.peo_center .m_vip .text_5{padding-bottom: 5.2vw;background: #fff;}
 	.div_text{max-width: 800px;display: block;margin: auto; }
-	.peo_center .m_vip .text_5 .p1_text{font-size: 16px;line-height: 50px;margin-bottom: 50px;}
+	.peo_center .m_vip .text_5 .p1_text{font-size: 16px;line-height: 0.6rem;margin-bottom: 0.6rem;}
 	.peo_center .m_vip .text_5 ul li {margin-bottom: 0.7vw;}
 	.peo_center .m_vip .text_5 ul li p{font-size: 16px;line-height: 20px;}
 	.peo_center .m_vip .text_5 ul li p span{font-weight: bold;}
